--- a/force-app/main/default/classes/GGW_ExportCtrl.cls
+++ b/force-app/main/default/classes/GGW_ExportCtrl.cls
@@ -1,6 +1,6 @@
 /**
  * GGW_ExportCtrl controller class for VFP Export and render.
- * 
+ * Standard controller extension used for Standard record page action
  * 
  * @author Igor Androsov
  * @version 1.0
@@ -13,13 +13,16 @@ public without sharing class GGW_ExportCtrl {
 
     public GGW_ExportCtrl(ApexPages.StandardController stdController) {
         this.app = (GGW_Grant_Application__c)stdController.getRecord();
+        system.debug('### PDF VIew START CTRL '+this.recordId);
         // set from URL Parm record ID
         this.recordId = this.app.Id; //'a001D0000058zp2QAA';//ApexPages.currentPage().getParameters().get('id');
-        this.items = [SELECT Id, Name, Application_Name__c, Grant_Application__c, Selected_Block__c, 
-                        GGW_Section__c, Section_Name__c, Text_Block__c,  Sort_Order__c
-                        FROM GGW_Selected_Item__c WHERE Grant_Application__c =: this.recordId ORDER BY Sort_Order__c];
+        system.debug('### PDF VIew ID:'+this.recordId);
+        this.items = GGW_Util.getSelectedItems(this.recordId);
         if(items != null && items.size()>0){
             this.appName = items[0].Application_Name__c;
+        }else{
+            this.appName = 'This view requires a Grant record, missing.';
         }
+
     }
 }
